[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syworkflow"
version = "0.0.9"
authors = [{ name = "Yao Siyuan", email = "siyuan89@163.com" }]
description = "A small python workflow scheduler"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/siyuany/sy-workflow"
Issues = "https://github.com/siyuany/sy-workflow/issues"
